bk_ida/gccida/g2/simplify_unary_operation
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:873:32: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:873:47: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                                              ^
                                              enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:873:74: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                                                                         ^
                                                                         enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:881:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v14; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:889:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v22; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:928:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtwint = ( __int64)v8[1]; 
                   ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:933:12: error: expected expression
*( _OWORD *)v32.r = *( _OWORD *)&args.operand; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:933:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v32.r = *( _OWORD *)&args.operand; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:934:25: error: too few arguments to function call, expected 2, have 1
real_value_truncate( v32); 
~~~~~~~~~~~~~~~~~~~     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/real.h:406:1: note: 'real_value_truncate' declared here
extern REAL_VALUE_TYPE real_value_truncate PARAMS ((enum machine_mode,
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:1089:12: error: expected expression
*( _OWORD *)v31.r = *( _OWORD *)&args.operand; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:1089:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v31.r = *( _OWORD *)&args.operand; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:1090:25: error: too few arguments to function call, expected 2, have 1
real_value_truncate( v31); 
~~~~~~~~~~~~~~~~~~~     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/real.h:406:1: note: 'real_value_truncate' declared here
extern REAL_VALUE_TYPE real_value_truncate PARAMS ((enum machine_mode,
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:1095:12: error: expected expression
*( _OWORD *)v33.r = *( _OWORD *)&args.operand; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:1095:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v33.r = *( _OWORD *)&args.operand; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:1102:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = ( signed __int64)v8[1]; 
                       ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:1125:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = ( __int64)v8[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:1215:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = mode_class_0[v4]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/simplify-rtx.c:1229:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v13] == MODE_FLOAT && v14 == MODE_INT && v11 - 1 <= 0x3F ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_unary_operation/src/obj/simplify-rtx.o] Error 1
